--- a/src/web/styles/page.css
+++ b/src/web/styles/page.css
@@ -11,4 +11,11 @@
    --header-text-color: 246, 246, 255;
    --number-color: 255, 6, 0;
    --black-color: 0, 0, 0;
+   --project-body-bg-color: 255, 255, 0;
+   --text-on-poject-body: 0, 0, 0;
+   --code-on-project-body: 149, 37, 37;
+}
+
+.page {
+    font-family: monospace;
 }
